# CppMemoryLayout

./: CMakeLists.txt  LICENSE  README.md  address_helper.h  class_types.h  memory_layout.cpp  type_helper.h
doc/: cpp_vptr_vtable.drawio
